[package]
name = "mojo-program"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-system = "0.2.0"
pinocchio-token = "0.3.0"
pinocchio-log = "0.4.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
ephemeral-rollups-pinocchio = "=0.3.7"

pinocchio-pubkey = "0.2.4"


[dev-dependencies]
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"
solana-program-pack = "3.0.0"
solana-program = "3.0.0"
solana-account = "3.0.0"
solana-program-test = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-transaction = "3.0.1"
solana-system-interface = { version="2.0.0", features=["bincode"] }
spl-token = "^8"
spl-token-interface = "2.0.0"
magicblock-delegation-program = "1.1.2"
