[package]
name = "mojo-sdk"
version = "0.1.0"
edition = "2021"
authors = ["names <emails>"]
description = "Rust SDK for building Solana Games on-chain"
license = ""
repository = ""
keywords = ["solana", "blockchain", "sdk", "gaming", "game", "engine"]

[lib]
name = "mojo_sdk"
path = "src/lib.rs"


[dependencies]
solana-transaction = "2.2.1"
solana-pubkey = "2.2.1"
solana-instruction = "2.2.1"
solana-signer = "2.2.1"
solana-signature = "2.2.1"
solana-keypair = "2.2.1"
solana-system-program = "2.2.1"
solana-sysvar = "2.2.1"
solana-program = "2.2.1"
solana-message = "2.2.1"
solana-rpc-client = "2.2.1"

anyhow = "1.0"
thiserror = "1.0"

sha2 = "0.10.9"

bytemuck = { version = "1.14", features = ["derive"] }
# borsh = { version = "1.0", features = ["derive"] }

[dev-dependencies]
litesvm = "0.6.1"
# solana-keypair = "2.2.1"
# solana-native-token = "2.2.1"
# solana-pubkey = "2.2.1"
# solana-system-interface = "1.0.0"
# solana-message = "2.2.1"
# solana-sdk-ids = "2.2.1"
# solana-address = "1.0.0"
# pinocchio-log = "0.5.1"


# solana-native-token = "2.2.1"
# solana-system-interface = "1.0.0"
# solana-account = "2.2.1"
# solana-rpc-client = "2.2.1"
# solana-instruction = "2.2.1"
# solana-keypair = "2.2.1"
# solana-transaction = "2.2.1"
# solana-signer = "2.2.1"
# solana-message = "2.2.1"
# solana-pubkey = "2.2.1"
# solana-sdk-ids = "2.2.1"
# pinocchio = "0.8.4"
# pinocchio-system = "0.2.3"
# pinocchio-token = "0.4.0"
# pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
# pinocchio-log = "0.5.1"
# ephemeral-rollups-pinocchio = "=0.3.7"
# mojo-program = {path = "../mojo-program/"}

