[package]
name = "mojo-sdk"
version = "0.1.0"
edition = "2021"
authors = ["names <emails>"]
description = "Rust SDK for building Solana Games on-chain"
license = ""
repository = ""
keywords = ["solana", "blockchain", "sdk", "gaming", "game", "engine"]

[lib]
name = "mojo_sdk"
path = "src/lib.rs"


[dependencies]
solana-transaction = "2.2.1"
solana-pubkey = "2.2.1"
solana-instruction = "2.2.1"
solana-signer = "2.2.1"
solana-signature = "2.2.1"
solana-keypair = "2.2.1"
solana-system-program = "2.2.1"
solana-sysvar = "2.2.1"
solana-program = "2.2.1"
solana-message = "2.2.1"
solana-rpc-client = "2.2.1"
solana-client = "2.2.1"

anyhow = "1.0"
thiserror = "1.0"

sha2 = "0.10.9"

bytemuck = { version = "1.14", features = ["derive"] }
# borsh = { version = "1.0", features = ["derive"] }

[dev-dependencies]
litesvm = "0.6.1"
mojo-program = {path = "../mojo-program/"}
